[project]
name = "mock-blog-api"
version = "0.1.0"
description = "The ultimate testbed blog template where fun meets functionality! This lightweight project is built for experimenting with tools, integrations, and new ideas—no serious blogging here, just testing the waters. Dive in, play around, and make it your own!"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.3",
    "ruff>=0.7.1",
    "sqlmodel>=0.0.22",
    "typer>=0.12.5",
]
