[project]
name = "mock-blog-api"
version = "0.2.0"
description = """
The ultimate testbed blog template where fun meets functionality! This lightweight project is built for experimenting
with tools, integrations, and new ideas—no serious blogging here, just testing the waters. Dive in, play around,
and make it your own!
"""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.13.3",
    "asyncpg>=0.30.0",
    "fastapi[standard]>=0.115.3",
    "passlib[bcrypt]>=1.7.4",
    "pydantic-settings>=2.6.0",
    "ruff>=0.7.1",
    "sentry-sdk[fastapi]>=2.17.0",
    "sqlmodel>=0.0.22",
    "typer>=0.12.5",
]
